fixed background, there is no white space when the window is resized and when the width is less than 640, hide the video, mobile friendly

--- a/style/style-main.css
+++ b/style/style-main.css
@@ -295,21 +295,24 @@ table {
 }
 
 #video-background {
-/*  making the video fullscreen  */
-  position: fixed;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: -100;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 /*
  * 
  * CSS FOR MAKING THE PAGE RESPONSIVE PARTIALLY
  *
  */
-img, video, canvas {
+img, canvas {
   max-width: 100%;
 }
